--- a/與我們聯絡.html
+++ b/與我們聯絡.html
@@ -79,7 +79,7 @@ http://www.tooplate.com/view/2101-insertion
         <div class="col-xl-12 col-lg-12 col-md-12 col-xs-12 tm-contact-col">
           <div class="tm-contact-left tm-bg-pink-light-2 tm-text-white text-right p-md-5 p-4">
             <i class="fas fa-3x fa-comments mb-4"></i>
-            <h2 class="tm-media-2-header">馬上留下資料預定<br>或<br>保留表單QRCORD隨時預約</h2>
+            <h2 class="tm-media-2-header">馬上留下資料預定品項<br>或<br>填寫QRCORD表單預約參加聖誕特別活動</h2>
           </div>
           <div class="tm-bg-gray tm-contact-middle">
             <form action="#" method="post">
